--- a/views/user_sign_up.ejs
+++ b/views/user_sign_up.ejs
@@ -1,7 +1,8 @@
-<form action="">
+<form action="/users/create" method="POST">
     <input type="text" name="fName" id="fName" placeholder="Enter First Name">
     <input type="text" name="lName" id="lName" placeholder="Enter Last Name">
     <input type="text" name="uName" id="uName" placeholder="Create User Name">
     <input type="password" name="password" id="password" placeholder="Create Password">
+    <input type="password" name="confirm_password" placeholder="Confirm Password">
     <button type="submit">Sign Up</button>
 </form>
