--- a/views/user_profile.ejs
+++ b/views/user_profile.ejs
@@ -1,3 +1,7 @@
-<link rel="stylesheet" href="/css/user_profile.css">
-    <p>Codeial/ Profile Page</p>
-   
+<link rel="stylesheet" href="/css/user_profile.css" />
+<p>Codeial/ Profile Page</p>
+
+<p>Name: <%= user.name %></p>
+<p>Email: <%= user.email%></p>
+
+<a href="/users/logout">signout</a>
