--- a/views/user_sign_in.ejs
+++ b/views/user_sign_in.ejs
@@ -1,1 +1,7 @@
 <h1>SignIn</h1>
+
+<form action="/users/create-session" method="POST">
+    <input type="email" name="email" placeholder="Enter Email" />
+    <input type="password" name="password" placeholder="Enter Password" />
+    <input type="submit" value="Sign In" />
+  </form>
