Solve sign in and sign up issue

--- a/views/user_profile.ejs
+++ b/views/user_profile.ejs
@@ -1,3 +1,4 @@
-<link rel="stylesheet" href="/css/user_profile.css">
-    <p>Codeial/ Profile Page</p>
-   
+<link rel="stylesheet" href="/css/user_profile.css" />
+<p>Codeial/ Profile Page</p>
+<p>Name: <%= user.name%></p>
+<p>User: <%= user.email%></p>
