--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -11,7 +11,7 @@
     <main id="layout-main">
       <%- body %>
     </main> 
-    <%- include('_footer'); %> <%-
-    script%>
+    <%- include('_footer'); %> 
+    <%- script%>
   </body>
 </html>
