--- a/views/_footer.ejs
+++ b/views/_footer.ejs
@@ -1,1 +1,7 @@
-<footer>Footer</footer>
+<footer class="footer_container">
+  <p>&#169;Copyright, Codeial</p>
+  <ul>
+    <li><a href="/">Home</a></li>
+    <li><a href="/users/profile">Profile</a></li>
+  </ul>
+</footer>
