--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -1,18 +1,25 @@
-<header>Header</header>
 
-<ul>
-  <% if(locals.user) {%>
-    <li><%= user.name %></li>
-  <li>
-    <a href="/users/signout">Sign Out</a>
-  </li>
+<div class="header_container">
 
-  <%} else {%>
-  <li>
-    <a href="/users/signin">Sign In</a>
-  </li>
-  <li>
-    <a href="/users/signout">Sign Out</a>
-  </li>
-  <% } %>
-</ul>
+  <h2>Codeial</h2>
+  <div class="header_pages">
+    <ul>
+      <% if(locals.user) {%>
+        <li><%= user.name %></li>
+      <li>
+        <a href="/users/signout">Sign Out</a>
+      </li>
+    
+      <%} else {%>
+      <li>
+        <a href="/users/signin">Sign In</a>
+      </li>
+      <li>
+        <a href="/users/signout">Sign Out</a>
+      </li>
+      <% } %>
+    </ul>
+  </div>
+
+</div>
+
