--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,1 +1,10 @@
 <h1>Codeial/ <%= title %></h1>
+
+<section class="feed_posts">
+    <h4>POSTS</h4>
+    <form action="" id="new-post-form" method="POST">
+        <textarea name="content" cols="30" rows="3" placeholder="type here..."></textarea>
+        <input type="submit" value="Post">
+    </form>
+
+</section>
