--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,10 +2,13 @@
 
 <section class="feed_posts">
     <h4>POSTS</h4>
-    <form action="/posts/create" id="new-post-form" method="POST">
-        <textarea name="content" cols="30" rows="3" placeholder="type here..."></textarea>
-        <input type="submit" value="Post">
-    </form>
+    <% if(locals.user) {%>
+        <form action="/posts/create" id="new-post-form" method="POST">
+            <textarea name="content" cols="30" rows="3" placeholder="type here..."></textarea>
+            <input type="submit" value="Post">
+        </form>
+    <%}%>
+   
 <div class="posts_container">
     <ul>
         <% for(post of posts) {%>
