--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,7 +4,7 @@
     <h4>POSTS</h4>
     <% if(locals.user) {%>
         <form action="/posts/create" id="new-post-form" method="POST">
-            <textarea name="content" cols="30" rows="3" placeholder="type here..."></textarea>
+            <textarea name="content" cols="30" rows="3" placeholder="type here..." required></textarea>
             <input type="submit" value="Post">
         </form>
     <%}%>
@@ -24,11 +24,28 @@
                 <!-- create a form for comments -->
                 <% if(locals.user) {%>
                     <form action="/comments/create" method="POST">
-                        <input type="text" name="content" placeholder="Write a comment...">
+                        <input type="text" name="content" placeholder="Write a comment..." required>
                         <input type="hidden" name="post" value="<%= post._id%>">
                         <input type="submit" value="Add Comment">
                     </form>
                  <%}%>
+
+                 <div class="post_comments_container">
+                    <ul class="posts_comments-<%= post._id%>">
+                        <% for(comment of post.comments){%>
+                            <li>
+                                <p>
+                                    <%= comment.content%>
+                                    <br>
+                                    <small>
+                                        <%= comment.user.name %>
+                                    </small>
+                                </p>
+                            </li>
+                        <%}%>
+                    </ul>
+
+                 </div>
                 
             </li>
         <%}%>
