--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -16,6 +16,8 @@
       display: inline-block;
       margin: 0 10px;
       list-style: none; }
+      .header_container ul li .header_name {
+        text-transform: capitalize; }
       .header_container ul li a {
         color: white;
         font-size: 1.2rem;
