--- a/assets/scss/header.scss
+++ b/assets/scss/header.scss
@@ -15,6 +15,9 @@
     // display: flex;
     margin: 20px 0 18px;
     li {
+      .header_name {
+        text-transform: capitalize;
+      }
       color: white;
       font-size: 1.2rem;
       display: inline-block;
