--- a/views/user_sign_up.ejs
+++ b/views/user_sign_up.ejs
@@ -1,3 +1,5 @@
+<h1>SignUp</h1>
+
 <form action="/users/create" method="POST">
     <input type="text" name="name" id="name" placeholder="Enter name Name">
     <input type="email" name="email" id="email" placeholder="Enter email address">
