--- a/views/home.ejs
+++ b/views/home.ejs
@@ -18,3 +18,13 @@
 
 </div>
 </section>
+
+<section class="user_friends">
+    <h4>Friends</h4>
+    <% for(u of all_users){%>
+        <p>
+            <a href="/users/profile/<%= u.id%>"><%= u.name%></a>
+        </p>
+    <%}%>
+
+</section>
