--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,30 +1,33 @@
-<h1>Codeial/ <%= title %></h1>
-
-<section class="feed_posts">
-    <h4>POSTS</h4>
-    <% if(locals.user) {%>
-        <form action="/posts/create" id="new-post-form" method="POST">
-            <textarea name="content" cols="30" rows="3" placeholder="type here..." required></textarea>
-            <input type="submit" value="Post">
-        </form>
-    <%}%>
-   
-<div class="posts_container">
-    <ul>
-        <% for(post of posts) {%>
-            <%- include('_post') -%>
+    <link rel="stylesheet" href="/css/home.css">
+    <div class="home_container">
+      
+    <section class="feed_posts">
+        <h4>POSTS</h4>
+        <% if(locals.user) {%>
+            <form action="/posts/create" id="new-post-form" method="POST">
+                <textarea name="content" cols="30" rows="3" placeholder="type here..." required></textarea>
+                <input type="submit" value="Post">
+            </form>
         <%}%>
-    </ul>
+    
+    <div class="posts_container">
+        <ul>
+            <% for(post of posts) {%>
+                <%- include('_post') -%>
+            <%}%>
+        </ul>
 
-</div>
-</section>
+    </div>
+    </section>
 
-<section class="user_friends">
-    <h4>Friends</h4>
-    <% for(u of all_users){%>
-        <p>
-            <a href="/users/profile/<%= u.id%>"><%= u.name%></a>
-        </p>
-    <%}%>
+    <section class="user_friends">
+        <h4>Friends</h4>
+        <% for(u of all_users){%>
+            <p>
+                <a href="/users/profile/<%= u.id%>"><%= u.name%></a>
+            </p>
+        <%}%>
 
-</section>
+    </section>
+
+    </div>
