--- a/views/_post.ejs
+++ b/views/_post.ejs
@@ -1,4 +1,4 @@
-<li id="post-<%= post.id %>">
+<li id="post-<%= post._id %>">
     <p>
         <% if(locals.user && locals.user.id == post.user.id){%>
             <small>
@@ -14,8 +14,10 @@
     </p>
 
     <!-- create a form for comments -->
+    <div class="post-comments">
     <% if(locals.user) {%>
-        <form action="/comments/create" method="POST">
+        <!-- let's give an id to the new comment form, we'll also need to make the same changes in home_posts.js where we're adding a post to the page -->
+        <form id="post-<%= post._id %>-comments-form" action="/comments/create" method="POST">
             <input type="text" name="content" placeholder="Write a comment..." required>
             <input type="hidden" name="post" value="<%= post._id%>">
             <input type="submit" value="Add Comment">
@@ -23,12 +25,13 @@
      <%}%>
 
      <div class="post_comments_container">
-        <ul class="posts_comments-<%= post._id%>">
+        <ul id="posts_comments-<%= post._id%>">
             <% for(comment of post.comments){%>
                 <%- include('_comment') -%>
             <%}%>
         </ul>
 
      </div>
+    </div> 
     
 </li>
